<resources>
    <string name="app_name">BusBooking</string>
    <string name="introducing">To search for a nearby stop press the button at the top right, for faster but less accurate access press \'WITHOUT GPS\'</string>
    <string name="favoriteEmpty">No favorites</string>
    <string name="startButton">START WITH GPS</string>
    <string name="startButtonNoGps">NO GPS</string>
    <string name="startButtonFavorites">FAVORITES</string>
    <string name="selectStop">Select bus stop</string>
    <string name="stopList">Wait for the stop list</string>
    <string name="stopBeep">Ok, thanks !</string>
    <string name="notrips">no other trips are scheduled for today</string>
    <string name="close">Close</string>
    <string name="to">To</string>
    <string name="instructions">Download instructions</string>
    <string name="trip">%s - %s in %s%sSelect the trip you want to follow"</string>
    <string name="privacy">Read the privacy policy</string>
    <string name="browsernotfound">No application can handle this request. Please install a webbrowser</string>
    <string name="atTheStopText">at the stop</string>
    <!-- Favorites popup -->
    <string name="favorite_popup_title">Favorite Stop</string>
    <string name="favorite_alias_hint">Alias</string>
    <string name="favorite_alias_confirm">Confirm</string>
    <string name="favorite_alias_saved">Alias saved</string>
    <string name="favorite_go_to_stop">Go to Stop</string>

</resources>