<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    tools:context=".Corsa">

    <LinearLayout
        android:id="@+id/autobusW"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@drawable/bus"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/stopBooking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close" />

        <TextView
            android:id="@+id/descrizioneVeicoloInArrivo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="AUTOBUS XX CON PEDANA"
            android:textColor="#5D4037"
            android:textSize="50dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--:--:--"
        android:textSize="85dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/autobusW" />

    <TextView
        android:id="@+id/fermata"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/atTheStopText"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@+id/timer"
        app:layout_constraintRight_toRightOf="@+id/timer"
        />
    <Button
        android:id="@+id/stopBeep"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stopBeep"
        app:layout_constraintTop_toBottomOf="@+id/fermata"
        app:layout_constraintRight_toRightOf="@+id/timer"/>
</androidx.constraintlayout.widget.ConstraintLayout>